# FluxoSolo

./: .gitignore  README.md  pyproject.toml
fluxosolo/: app.py
fluxosolo/services/: parser.py
fluxosolo/services/parsers/: BancoBrasil.py  Nubank.py  Sicoob.py
