[project]
name = "fluxosolo"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio Hilário",email = "caio10hilario@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.8,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fluxosolo/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fluxosolo -vv'
